<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/BookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bkt"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/au"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/Genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gen"
        android:textAlignment="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AddBook"
        android:text="@string/abut" />

</LinearLayout>