<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical">

<EditText
    android:id="@+id/UserName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/usrnme"
    android:textAlignment="center"/>
<EditText
    android:id="@+id/Password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/pswd"
    android:textAlignment="center"/>
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/EnterDetails"
    android:text="@string/Submit" />





</LinearLayout>